--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,7 @@
     "start": "next start"
   },
   "dependencies": {
+    "dotenv": "^8.2.0",
     "formik": "^2.2.6",
     "next": "10.0.5",
     "node-sass": "^5.0.0",
