--- a/client/package.json
+++ b/client/package.json
@@ -10,6 +10,7 @@
   "dependencies": {
     "dotenv": "^8.2.0",
     "formik": "^2.2.6",
+    "jwt-decode": "^3.1.2",
     "next": "10.0.5",
     "node-sass": "^5.0.0",
     "react": "17.0.1",
