--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "lodash": "^4.17.20",
     "next": "10.0.5",
     "node-sass": "^5.0.0",
+    "query-string": "^6.14.0",
     "react": "17.0.1",
     "react-dom": "17.0.1",
     "react-toastify": "^7.0.3",
