--- a/client/package.json
+++ b/client/package.json
@@ -8,6 +8,8 @@
     "start": "next start"
   },
   "dependencies": {
+    "@stripe/react-stripe-js": "^1.4.0",
+    "@stripe/stripe-js": "^1.13.1",
     "classnames": "^2.2.6",
     "dotenv": "^8.2.0",
     "formik": "^2.2.6",
