--- a/server/package.json
+++ b/server/package.json
@@ -20,7 +20,8 @@
     "strapi-plugin-upload": "3.4.6",
     "strapi-plugin-users-permissions": "3.4.6",
     "strapi-provider-upload-aws-s3": "^3.4.6",
-    "strapi-utils": "3.4.6"
+    "strapi-utils": "3.4.6",
+    "stripe": "^8.137.0"
   },
   "author": {
     "name": "A Strapi developer"
